[package]
name = "petty-intern"
version = "0.1.0"
edition = "2024"

description = "A simple interning library"
keywords = ["interner", "interning", "caching", "hash"]
license = "MIT or Apachi"
repository = "https://github.com/Icerath/petty-intern"

[features]
sync = []

[lints.clippy]
pedantic = "warn"

[dependencies]
bumpalo = "3.17.0"
hashbrown = "0.15.2"
rustc-hash = "2.1.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
