[package]
name = "petty-intern"
version = "0.1.5"
edition = "2024"

description = "A simple interning library"
keywords = ["interner", "interning", "caching", "hash"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Icerath/petty-intern"

[features]
sync = []
default = ["sync"]

[lints.clippy]
pedantic = "warn"

[dependencies]
bumpalo = "3.17.0"
hashbrown = "0.16.1"
rustc-hash = "2.1.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
